--- a/Cookery/Info.plist
+++ b/Cookery/Info.plist
@@ -32,7 +32,7 @@
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Show you restaraunt!</string>
+	<string>Do you want to see your current location?</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
